metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/AndroidPublicContent__c.field-meta.xml
<CustomField>
    <fullName>AndroidPublicContent__c</fullName>
    <label>Android (Public Content)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>