metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Picklist field to indicate the audience of the article, used for internal tracking purposes.</description>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Facing</fullName>
            </value>
            <value>
                <fullName>Pro Facing</fullName>
            </value>
            <value>
                <fullName>Customer and Pro Facing</fullName>
            </value>
            <value>
                <fullName>Unsearchable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>