metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/BestPracticeInternalContent__c.field-meta.xml
<CustomField>
    <fullName>BestPracticeInternalContent__c</fullName>
    <description>Field to house content specific to internal best practices.  Field should only be visible to internal staff.</description>
    <label>Best Practice (Internal Content)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>