metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/BitlyLink__c.field-meta.xml
<CustomField>
    <fullName>BitlyLink__c</fullName>
    <description>URL field to house the bit.ly link for the specified article.</description>
    <label>Bit.ly</label>
    <type>Url</type>
</CustomField>