metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/ContainsVideo__c.field-meta.xml
<CustomField>
    <fullName>ContainsVideo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field; when checked (true) will display a video icon next to the article title anywhere the article is visible in the public help center.</description>
    <label>Contains Video</label>
    <type>Checkbox</type>
</CustomField>