metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/CSArticleView__c.field-meta.xml
<CustomField>
    <fullName>CSArticleView__c</fullName>
    <description>Link that can be sent to CS agents to open directly in console view.</description>
    <formula>'https://thumbtack.my.salesforce.com/console#%2Farticles%2FPublicArticle%2F'&amp;UrlName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link that can be sent to CS agents to open directly in the tack app view.</inlineHelpText>
    <label>CS Article View</label>
    <type>Text</type>
</CustomField>