metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/HelpCenterArticleId__c.field-meta.xml
<CustomField>
    <fullName>HelpCenterArticleId__c</fullName>
    <description>Open text field that will be populated by the Sys Admin to store the Public Article ID (parent, __ka); used in formula field to produce Help Center URL Link</description>
    <label>Help Center Article Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>