metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/HelpCenterLink__c.field-meta.xml
<CustomField>
    <fullName>HelpCenterLink__c</fullName>
    <description>Formula field to display the URL that an agent can send a Pro or Customer to from a Knowledge article inside the service console.</description>
    <formula>HYPERLINK("https://help.thumbtack.com/article/"&amp;UrlName,"Help Center Link")</formula>
    <label>Help Center Link</label>
    <type>Text</type>
</CustomField>