metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/HelpCenterPublicContent__c.field-meta.xml
<CustomField>
    <fullName>HelpCenterPublicContent__c</fullName>
    <label>Help Center (Public Content)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>