metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/iPhonePublicContent__c.field-meta.xml
<CustomField>
    <fullName>iPhonePublicContent__c</fullName>
    <label>iPhone (Public Content)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>