metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/KnowledgePointOfContact__c.field-meta.xml
<CustomField>
    <fullName>KnowledgePointOfContact__c</fullName>
    <description>Open text area of the content manager to add in the person's name and department of who the subject matter expert is for the article text.</description>
    <inlineHelpText>Please enter the name and department of the person who you are working with to compile the knowledge article.</inlineHelpText>
    <label>Knowledge Point of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>