metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/MetaDescription__c.field-meta.xml
<CustomField>
    <fullName>MetaDescription__c</fullName>
    <description>Used in the article's meta tags - this allows us to override the description displayed on a social media card when the article is shared.</description>
    <inlineHelpText>Overrides the description displayed on a social media card when the article is shared. Limited to 155 characters.</inlineHelpText>
    <label>Meta Description</label>
    <length>155</length>
    <type>Text</type>
</CustomField>