metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/MetaImage__c.field-meta.xml
<CustomField>
    <fullName>MetaImage__c</fullName>
    <description>Meta image for use in social media share cards.</description>
    <inlineHelpText>Image to be shown on the card when the article is shared via social media.</inlineHelpText>
    <label>Meta Image</label>
    <type>File</type>
</CustomField>