metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/MetaTitle__c.field-meta.xml
<CustomField>
    <fullName>MetaTitle__c</fullName>
    <description>Used in the article's meta tags. Allows the title to be overridden on social media cards when the article is shared.</description>
    <inlineHelpText>Overrides the article's title on the social media card when the article is shared.</inlineHelpText>
    <label>Meta Title</label>
    <length>60</length>
    <type>Text</type>
</CustomField>