metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/NewContentSupportRequestLink__c.field-meta.xml
<CustomField>
    <fullName>NewContentSupportRequestLink__c</fullName>
    <formula>HYPERLINK("/a05/e?00N3100000GNNoG="&amp;ArticleNumber&amp;"&amp;Name=Content Request for "&amp;ArticleNumber&amp;"&amp;00N3100000G42tT="&amp;Title 
, "New Content Support Request","_self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Content Support Request Link</label>
    <type>Text</type>
</CustomField>