metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/PreviewInHelpCenter__c.field-meta.xml
<CustomField>
    <fullName>PreviewInHelpCenter__c</fullName>
    <description>Formula field to link a content manager to an article preview in the public help center.</description>
    <formula>HYPERLINK("/apex/hcpagermo?preview="&amp;X18DigitID__c,"Open Preview Window", "_blank")</formula>
    <label>Preview in Help Center</label>
    <type>Text</type>
</CustomField>