metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/ProductLinksToArticle__c.field-meta.xml
<CustomField>
    <fullName>ProductLinksToArticle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Thumbtack.com product or marketing content links to article.</description>
    <label>Product/Marketing Links to Article</label>
    <type>Checkbox</type>
</CustomField>