metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/RelatedContent__c.field-meta.xml
<CustomField>
    <fullName>RelatedContent__c</fullName>
    <description>Custom rich text field to house the email templates and/or macros that could be used to respond to the customer/pro.</description>
    <label>Related Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>