metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field used for data cleanup.</description>
    <label>Temp</label>
    <type>Checkbox</type>
</CustomField>