metadata-sfdx/force-app/main/default/objects/PublicArticle__kav/validationRules/BitlyRequiredForPKB.validationRule-meta.xml
<ValidationRule>
    <fullName>BitlyRequiredForPKB</fullName>
    <active>false</active>
    <description>Require bit.ly before adding to PKB channel.</description>
    <errorConditionFormula>ISBLANK(BitlyLink__c)&amp;&amp; 
IsVisibleInPkb = True</errorConditionFormula>
    <errorMessage>A bit.ly link is required before making this article visible in the public knowledge base.</errorMessage>
</ValidationRule>